tests/examples/raw/__outputs__/raw/raw_rawTyped__raw-typed.output.txt

node:internal/modules/run_main:123
    triggerUncaughtException(
    ^
Error [ERR_MODULE_NOT_FOUND]: Cannot find module '/some/path/to/raw_rawTyped__raw-typed.ts' imported from /Users/jasonkuhrt/projects/jasonkuhrt/graffle/
    at finalizeResolution (node:internal/modules/esm/resolve:XX:XX)
    at moduleResolve (node:internal/modules/esm/resolve:XX:XX)
    at defaultResolve (node:internal/modules/esm/resolve:XX:XX)
    at nextResolve (node:internal/modules/esm/hooks:XX:XX)
    at resolveBase (file:///Users/jasonkuhrt/projects/jasonkuhrt/graffle/node_modules/.pnpm/tsx@4.19.1/node_modules/tsx/dist/esm/index.mjs?1726353755337:XX:XX)
    at resolveDirectory (file:///Users/jasonkuhrt/projects/jasonkuhrt/graffle/node_modules/.pnpm/tsx@4.19.1/node_modules/tsx/dist/esm/index.mjs?1726353755337:XX:XX)
    at resolveTsPaths (file:///Users/jasonkuhrt/projects/jasonkuhrt/graffle/node_modules/.pnpm/tsx@4.19.1/node_modules/tsx/dist/esm/index.mjs?1726353755337:XX:XX)
    at resolve (file:///Users/jasonkuhrt/projects/jasonkuhrt/graffle/node_modules/.pnpm/tsx@4.19.1/node_modules/tsx/dist/esm/index.mjs?1726353755337:XX:XX)
    at nextResolve (node:internal/modules/esm/hooks:XX:XX)
    at Hooks.resolve (node:internal/modules/esm/hooks:XX:XX) {
  code: 'ERR_MODULE_NOT_FOUND',
  url: 'file:/some/path/to/raw_rawTyped__raw-typed.ts'
}

Node.js vXX.XX.XX